  * Renamed file prims, changing all mentions of 'file' to descr with the
    exception of file-open, file-seek, file-pos, file-reset.  Also made these
    identifiers more conversational -- verb-type-modifier, e.g. 
    write-descr-quad and read-descr-all
  * Added the globals primitive to core, which returns a set containing all
    of the symbols currently assigned a global value.
  + t Added alarm.c, which implements a table of processes suspended as they
    wait to read or write to a specified descriptor.
  + t Added net.c, which provides the ability to resolve ipv4 addresses, connect
    to TCP services, and serve TCP connections.
  + t Added a call to continue to mqo_process_alarms, to be used at the end of
    a sweep through active processes.
  + t Added prims/net.c to provide net.c functionality to MOSVM applications.
  + Added primitives to prims/os.c to support alarms.

- 1/28/2006, Resume Transfers to Suspend
  * Altered the suspend primitive to not place a return value on the stack
    prior to suspending the process.
  * Altered the suspend primitive to only suspend the active process.
  * Altered the resume primitive to place a supplied value on the stack of the
    resumed process.

- 1/27/2006, Process Scheduler, Suspend / Resume / Stop / Spawn.
  * Altered mqo_process to contain a status symbol, which will contain one of
    the following -- suspended, running, paused, halted.
  * Altered mqo_process to contain references to a next and a prev process.
  * Altered mqo_continue to cycle between paused processes.
  * Added the mqo_spawn function.
  * Altered mqo_execute to use mqo_spawn, then repeatedly mqo_continue until
    there are no more processes.
  * Altered all users of MQO_XP to correctly use MQO_NEXT_INSTR, MQO_NEXT_PROC
    or MQO_NEXT_LIFE to signal why a non-local exit was required.
  * Added show_process to show.c
  * Added the spawn primitive, which creates a new process that will execute
    the supplied thunk.